Add Example 4 environment variable includeTestsMatching